@@ -380,6 +380,7 @@ Included
 - `safe-run`, `run`, `examine`, `email unpack`, `email safe-run`, and `container scan` now also fail closed when the parent of the requested directory-style output path is a file (`*_OUT_PATH_PARENT_NOT_DIRECTORY`), avoiding generic stage-init failures.
 - `export-json --format normalized_v0` now fails closed when `--out` is an existing directory (`EXPORT_JSON_OUT_PATH_IS_DIRECTORY`) or when the parent of `--out` is a file (`EXPORT_JSON_OUT_PATH_PARENT_NOT_DIRECTORY`), avoiding generic file-write failures before staged finalize.
 - `license issue` now fails closed when `--out` is an existing directory (`LICENSE_OUT_PATH_IS_DIRECTORY`) or when the parent of `--out` is a file (`LICENSE_OUT_PATH_PARENT_NOT_DIRECTORY`), avoiding generic file-write failures before signing/output finalize.
+- `adapter doctor --write-policy` now fails closed on invalid file-output path kinds (`ADAPTER_POLICY_OUT_PATH_IS_DIRECTORY`, `ADAPTER_POLICY_OUT_PATH_PARENT_NOT_DIRECTORY`) instead of returning a generic write failure.
 - `safe-run`, `run`, and `examine` now fail closed when `--out` equals or overlaps the input path (`*_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
 - `email unpack` and `email safe-run` now also fail closed when `--out` equals or overlaps the input path, preventing staged-finalize cleanup from deleting or replacing source email inputs or normalized email exports.
 - `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
